--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -1398,6 +1398,7 @@ i.goog:hover {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     margin: 0 0 1em;
+    white-space: nowrap;
 }
 
 .footer {
